# nielsen-scope

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
conf/: logging.yml
conf/base/: catalog.yml  mlflow.yml  parameters.yml
docs/source/: conf.py  index.rst
src/nielsen_scope/: __init__.py  __main__.py  settings.py
src/nielsen_scope.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/nielsen_scope/pipelines/feature_engineering/: nodes.py  pipeline.py
src/nielsen_scope/pipelines/ingestion/: nodes.py  pipeline.py
src/nielsen_scope/pipelines/training/: __init__.py  nodes.py  pipeline.py
src/nielsen_scope/sql/: drop_all.sql  features.sql  schema.sql
tests/pipelines/training/: test_pipeline.py  test_training_pipeline.py
