[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.10"
name = "nielsen_scope"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "notebook",
    "kedro~=1.5.0",
    "ydata-profiling>=4.18.4",
    "pandas>=2.3.3",
    "statsforecast>=2.0.2",
    "docker>=7.1.0",
    "dash>=4.4.0",
    "sqlalchemy>=2.0.51",
    "openpyxl>=3.1.5",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "kedro-datasets[pandas]>=9.5.0",
    "kedro-mlflow>=2.0.3",
    "mlflow>=3.14.0",
    "xgboost>=3.2.0",
    "scikit-learn>=1.7.2",
    "kedro-viz>=12.4.0",
    "pytest>=7.4.4",
]

[project.scripts]
"nielsen-scope" = "nielsen_scope.__main__:main"

[project.entry-points."kedro.hooks"]

[project.optional-dependencies]
docs = [
    "docutils<0.21",
    "sphinx>=5.3,<7.3",
    "sphinx_rtd_theme==2.0.0",
    "nbsphinx==0.8.1",
    "sphinx-autodoc-typehints==1.20.2",
    "sphinx_copybutton==0.5.2",
    "ipykernel>=5.3, <7.0",
    "Jinja2<3.2.0",
    "myst-parser>=1.0,<2.1"
]
dev = [
    "pytest-cov>=3,<7",
    "pytest-mock>=1.7.1, <2.0",
    "pytest~=7.2",
    "ruff~=0.12.0"
]

[tool.setuptools.dynamic]
version = {attr = "nielsen_scope.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.kedro]
package_name = "nielsen_scope"
project_name = "Nielsen_Scope"
kedro_init_version = "1.5.0"
tools = "['Linting', 'Testing', 'Custom Logging', 'Documentation', 'Data Structure']"
example_pipeline = "False"
source_dir = "src"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/nielsen_scope -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff]
line-length = 88
show-fixes = true

[tool.ruff.lint]
select = [
    "F",   # Pyflakes
    "W",   # pycodestyle
    "E",   # pycodestyle
    "I",   # isort
    "UP",  # pyupgrade
    "PL",  # Pylint
    "T201", # Print Statement
]
ignore = ["E501"]  # Ruff format takes care of line-too-long

[tool.kedro_telemetry]
project_id = "00f0d1562c46497085f06fa967e5afaa"
